--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,15 @@
 <body>
   <h1>21 Savage</h1>
   <h2>Why you trappin so hard?</h2>
-
-
   <h3>Messages</h3>
   <ul class="messages">
   <% for(var i=0; i<messages.length; i++) {%>
     <li class="message">
       <span><%= messages[i].name %></span>
       <span><%= messages[i].msg %></span>
-      <span><%= messages[i].thumbUp %></span>
+      <span class="hide"><%= messages[i].thumbUp  %></span>
+      <span class="hide"><%= messages[i].thumbDown %></span>
+    <span><%= messages[i].thumbUp - messages[i].thumbDown %></span>
       <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
       <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
       <span><i class="fa fa-trash" aria-hidden="true"></i></span>
